--- a/oldFiles/portfolio.html
+++ b/oldFiles/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Jillian Flook</title>
+	<title>Jillian Flook- Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="assets/reset.css"> 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand|Rubik" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/typeplate.css">
