updated site with hangman game slide, adjusted reponsive image interface

--- a/Home/index.html
+++ b/Home/index.html
@@ -141,15 +141,15 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                    <a href="../Hangman-Game/index.html" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/Hangman.png" class="img-responsive" alt="hangman game snapshot">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    JavaScript
+                                    JavaScript -- HTML -- CSS
                                 </div>
                                 <div class="project-name">
-                                    Hangman
+                                    Find out how "basic" you really are with this modern hangman game.
                                 </div>
                             </div>
                         </div>
@@ -277,7 +277,7 @@
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="js/creative.min.js"></script>
+    <script src="js/creative.js"></script>
 
 </body>
 
