updated hangman game url

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="../Hangman/index.html" target="_blank" class="portfolio-box">
+                    <a href=https://jflook10.github.io/Hangman-Game/" target="_blank" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/Hangman.png" class="img-responsive" alt="hangman game snapshot">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
