updated parks and rec link and photo

--- a/index.html
+++ b/index.html
@@ -156,15 +156,16 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                    <a href="https://jflook10.github.io/rpGame/" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/Parks.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Web Application
+                                    JavaScript --  JQuery -- HTML -- CSS
                                 </div>
                                 <div class="project-name">
-                                    RP Game
+                                    Parks and Recreation theme role player game. <br>
+                                    "Shut up Jerry."
                                 </div>
                             </div>
                         </div>
