updated links to trivia game and image

--- a/index.html
+++ b/index.html
@@ -172,15 +172,15 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
+                    <a href="https://jflook10.github.io/TriviaGame/" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/iconicHeader.png" class="img-responsive" alt="Trivia quiz header image">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    JavaScript
+                                    JavaScript -- JQuery  -- HTML -- CSS
                                 </div>
                                 <div class="project-name">
-                                    Trivia Game
+                                    Test your company-logo-knowledge with a timed trivia quiz. 
                                 </div>
                             </div>
                         </div>
