--- a/index.html
+++ b/index.html
@@ -187,30 +187,30 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
+                    <a href="https://jflook10.github.io/Giphy/" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/GIFYmals.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Widget
+                                    Gify API -- Local Storage
                                 </div>
                                 <div class="project-name">
-                                    Rutgers Widget
+                                    Watch your favorite animal gifs all in one place.
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                    <a href="https://sheltered-scrubland-28774.herokuapp.com/" target= "_blank" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/KnowGo.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Web Application
+                                    KnowGo Austin
                                 </div>
                                 <div class="project-name">
-                                    Rock Paper Scissors
+                                    Safety single page app for Austin events.
                                 </div>
                             </div>
                         </div>
