--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="jillian@flook.co">jillian@flook.co</a></p>
+                    <p><a href="mailto:jkenw10@gmail.com">jkenw10@gmail.com</a></p>
                 </div>
             </div>
         </div>
