--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://sheltered-scrubland-28774.herokuapp.com/" target= "_blank" class="portfolio-box">
+                    <a href="https://knowgo.herokuapp.com/" target= "_blank" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/KnowGo.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
