updated platonix tile with info but no link

--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Front End Design
+                                    Platonix
                                 </div>
                                 <div class="project-name">
-                                    Site Sketch
+                                    Coming soon: Full stack application using MySQL and node.js.
                                 </div>
                             </div>
                         </div>
