updated platonix tile, added thumbnail, changed email

--- a/index.html
+++ b/index.html
@@ -218,14 +218,14 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/Platonix.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Platonix
                                 </div>
                                 <div class="project-name">
-                                    Coming soon: Full stack application using MySQL and node.js.
+                                    Full stack application using MySQL and node.js.
                                 </div>
                             </div>
                         </div>
@@ -260,7 +260,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:jkenw10@gmail.com">jkenw10@gmail.com</a></p>
+                    <p><a href="mailto:jillian@flook.co">jillian@flook.co</a></p>
                 </div>
             </div>
         </div>
