update about me, limit 3 portfolio, edit contact

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#skills">Skills</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -73,8 +73,8 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Jillian Flook</h1>
                 <hr>
-                <p>Websites and applications come to life. Easy for you and always lovely for your users.</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <p>Full-stack web developer in Austin, Texas, focusing on front-end applications and UX. </p>
+                <!-- <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a> -->
             </div>
         </div>
     </header>
@@ -85,20 +85,17 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About Jillian</h2>
                     <hr class="light">
-                    <p class="text-faded">I am a Texas native and Houston to Austin transplant. After completing my undergrad in Art History at Baylor, I went to work in the non-profit world. For two years I pursued my personal and creative interest in web development.</p>
-
-                    <p class="text-faded">I am currently completing my web development certificate at the University of Texas Austin. Upon completing the program, I will be building full-stack web sites and applications!</p>
-
+                    <p class="text-faded">I am a Texas native and Houston to Austin transplant. After completing my Bachelor of Arts in Art History and Spanish at Baylor, I dove into the nonprofit world. For the past three years, I pursued my personal and creative interest in web development before completing the University of Texas Full-Stack Development certification.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="services">
+    <section id="skills">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">Skills</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -107,87 +104,49 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Secure Websites</h3>
-                        <p class="text-muted">You website is updated regularly so it always works.</p>
+                        <img src="img/skills/css3.png" alt="css logo" class="skillsPic">
+                        <h3>CSS</h3>
+                        <p class="text-muted"></p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">In Austin or Austrailia, your website is accesible anywhere you are.</p>
+                        <img src="img/skills/javascript.png" alt="javascript logo" class="skillsPic">
+                        <h3>JavaScript</h3>
+                        <p class="text-muted"></p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">I update as you need it to keep things fresh.</p>
+                        <img src="img/skills/nodejs.ico" alt="nodejs logo" class="skillsPic">
+                        <h3>Node.js</h3>
+                        <p class="text-muted"></p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">The secret sauce- your website will work as hard as you do. That's something to love!</p>
+                        <img src="img/skills/mysql.png" alt="MySQL logo" class="skillsPic">
+                        <h3>MySQL</h3>
+                        <p class="text-muted"></p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="no-padding" id="portfolio">
+    <section class="bg-primary" id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Portfolio</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://jflook10.github.io/Hangman-Game/" target="_blank" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/Hangman.png" class="img-responsive" alt="hangman game snapshot">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    JavaScript -- HTML -- CSS
-                                </div>
-                                <div class="project-name">
-                                    Find out how "basic" you really are with this modern hangman game.
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="https://jflook10.github.io/rpGame/" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/Parks.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    JavaScript --  JQuery -- HTML -- CSS
-                                </div>
-                                <div class="project-name">
-                                    Parks and Recreation theme role player game. <br>
-                                    "Shut up Jerry."
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="https://jflook10.github.io/TriviaGame/" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/iconicHeader.png" class="img-responsive" alt="Trivia quiz header image">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    JavaScript -- JQuery  -- HTML -- CSS
-                                </div>
-                                <div class="project-name">
-                                    Test your company-logo-knowledge with a timed trivia quiz. 
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="https://jflook10.github.io/Giphy/" class="portfolio-box">
+                    <a href="https://jflook10.github.io/Giphy/" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/GIFYmals.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -235,36 +194,32 @@
         </div>
     </section>
 
-    <aside class="bg-dark">
+    <aside class="bg-dark" id="contact">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Connect with me</h2>
-                <a href="https://www.linkedin.com/in/jillian-flook-16954558/" class="btn btn-default btn-xl sr-button">LinkedIn</a>
-                <a href="https://github.com/jflook10" class="btn btn-default btn-xl sr-button">GitHub</a>
-                <a href="https://stackoverflow.com/users/7443932/jflook" class="btn btn-default btn-xl sr-button">Stack Overflow</a>
+                <a href="https://www.linkedin.com/in/jillian-flook/" class="btn btn-default btn-xl sr-button" target="_blank">LinkedIn</a>
+                <a href="https://github.com/jflook10" class="btn btn-default btn-xl sr-button" target="_blank">GitHub</a>
+                <a href="mailto:jillian@flook.co" class="btn btn-default btn-xl sr-button" target="_blank">jillian@flook.co</a>
             </div>
         </div>
     </aside>
 
-    <section id="contact">
+<!--     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project? That's great- call or send an email to get started today!</p>
+                    <p>Ready to start your next project? That's great- send an email to get started today!</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>281-###-####</p>
-                </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-8 col-lg-offset-2  text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                     <p><a href="mailto:jillian@flook.co">jillian@flook.co</a></p>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
