add logo, change header, edit nav in css, edit colors in css

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Jillian Flook</h1>
+                <!-- <h1 id="homeHeading">Jillian Flook</h1> -->
+                <img src="img/JF.LogoCircle.png" alt="Jillian logo">
                 <hr>
                 <p>Full-stack web developer in Austin, Texas, focusing on front-end applications and UX. </p>
                 <!-- <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a> -->
@@ -83,7 +84,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">About Jillian</h2>
+                    <h2 class="section-heading">About</h2>
                     <hr class="light">
                     <p class="text-faded">I am a Texas native and Houston to Austin transplant. After completing my Bachelor of Arts in Art History and Spanish at Baylor, I dove into the nonprofit world. For the past three years, I pursued my personal and creative interest in web development before completing the University of Texas Full-Stack Development certification.</p>
                 </div>
@@ -102,28 +103,28 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6 col-sm-6 text-center">
                     <div class="service-box">
                         <img src="img/skills/css3.png" alt="css logo" class="skillsPic">
                         <h3>CSS</h3>
                         <p class="text-muted"></p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6  col-sm-6 text-center">
                     <div class="service-box">
                         <img src="img/skills/javascript.png" alt="javascript logo" class="skillsPic">
                         <h3>JavaScript</h3>
                         <p class="text-muted"></p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6  col-sm-6 text-center">
                     <div class="service-box">
                         <img src="img/skills/nodejs.ico" alt="nodejs logo" class="skillsPic">
                         <h3>Node.js</h3>
                         <p class="text-muted"></p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6 col-sm-6 text-center">
                     <div class="service-box">
                         <img src="img/skills/mysql.png" alt="MySQL logo" class="skillsPic">
                         <h3>MySQL</h3>
@@ -139,7 +140,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Portfolio</h2>
-                    <hr class="primary">
+                    <hr class="light">
                 </div>
             </div>
         </div>
